Home page overflow fixed

--- a/resources/js/assets/scss/home/style.scss
+++ b/resources/js/assets/scss/home/style.scss
@@ -4833,7 +4833,7 @@ p.link-hover,
 
 @media screen and (min-width:1200px) {
     .banner-logo {
-        width: 50%;
+        width: 35%;
     }
 
     .banner-cont-info {
@@ -4843,7 +4843,7 @@ p.link-hover,
 
 @media screen and (max-width:1200px) {
     .banner-logo {
-        width: 50%;
+        width: 35%;
     }
 
     .banner-cont-info {
